[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wechat-article-mcp"
version = "0.1.0"
description = "Standalone MCP server for WeChat article login, search, listing, and content extraction."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.27.0",
  "requests>=2.32.0",
  "beautifulsoup4>=4.12.0"
]

[project.scripts]
wechat-article-mcp = "wechat_article_mcp.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
